--- a/src/main/resources/frontend/css/style.css
+++ b/src/main/resources/frontend/css/style.css
@@ -52,6 +52,20 @@ button:hover {
     opacity: 0.7;
 }
 
+.small {
+    width: 200px;
+}
+
+.search {
+    font-size: 18px;
+    padding: 6px;
+}
+
+.search-movie-container {
+    margin-top: 10px;
+    text-align: center;
+}
+
 form label {
     padding-bottom: 40px;
 }
